validador de email

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,6 +16,8 @@
     <string name="guardar">&#xf0c7; Guardar</string>
     <string name="showMessageAtention">¡Atención!</string>
     <string name="emptyField">Alguno o todos los campos están vacíos, por favor, ingresa un valor para continuar. \nGracias.</string>
+    <string name="emailRegistered">El email ingresado ya esta registrado. \nGracias.</string>
+
 
     <string-array name="registro_country">
         <item name="AS01">Afganistán</item>
