Validacion, busuqeda por ususario y correcion de mensajes

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,8 +16,9 @@
     <string name="guardar">&#xf0c7; Guardar</string>
     <string name="showMessageAtention">¡Atención!</string>
     <string name="emptyField">Alguno o todos los campos están vacíos, por favor, ingresa un valor para continuar. \nGracias.</string>
-    <string name="emailRegistered">El email ingresado ya esta registrado. \nGracias.</string>
-    <string name="emailFormat">El email ingresado no es correcto, favor de verificarlo. \nGracias.</string>
+    <string name="emailRegistered">El email ingresado ya esta registrado, por favor, ingresa otro email para continuar o puedes recuperar tu contraseña desde la pantalla de inicio. \nGracias.</string>
+    <string name="emailFormat">El email ingresado no es valido, por favor, ingresa un email valido para continuar. \nGracias.</string>
+    <string name="userRegistered">El usuario ingresado ya esta registrado, por favor, ingresa otro usuario para continuar. \nGracias.</string>
 
 
     <string-array name="registro_country">
