--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,6 +20,15 @@
     <string name="setingsico">&#xf085;</string>
     <string name="editprofile">Editar Perfil</string>
     <string name="newreport">Nuevo Reporte</string>
+    <string name="lineitem">Nuevo Gasto</string>
+    <string name="lineitemdate">&#xf073; Fecha</string>
+    <string name="lineitemamt">&#xf0d6; Total</string>
+    <string name="lineitemdescription">&#xf044; Descripción</string>
+    <string name="lineitemfrom">&#xf1b9; Desde</string>
+    <string name="lineitemto">&#xf1b9; Hasta</string>
+    <string name="lineitemmerchant">&#xf568; Marca/Vendedor</string>
+    <string name="lineitemallocation">&#xf09d; Cuenta</string>
+    <string name="lineitemattach">&#xf0c6;</string>
     <string name="reportname">&#xf15b; Nombre del Reporte</string>
     <string name="date">&#xf133; Fecha</string>
     <string name="location">&#xf3c5; Lugar</string>
